# mmo

./: .clang-format  .clang-tidy  .gitignore  BGFX_MIGRATION_STATUS.md  CLAUDE.md  CMakeLists.txt  README.md  start.sh
shaders/: CMakeLists.txt  README.md
shaders/compiled/: README.md
shaders/src/: README.md  billboard.frag.hlsl  billboard.vert.hlsl  effect.frag.hlsl  effect.vert.hlsl  grass.frag.hlsl  grass.vert.hlsl  grid.vert.hlsl  model.frag.hlsl  model.vert.hlsl  shadow.frag.hlsl  shadow.vert.hlsl  skinned_model.frag.hlsl  skinned_model.vert.hlsl  skinned_shadow.vert.hlsl  skybox.frag.hlsl  skybox.vert.hlsl  ssao.frag.hlsl  ssao.vert.hlsl  ssao_blur.frag.hlsl  ssao_gbuffer.frag.hlsl  ssao_gbuffer.vert.hlsl  terrain.frag.hlsl  terrain.vert.hlsl  text.frag.hlsl  text.vert.hlsl  ui.frag.hlsl  ui.vert.hlsl
src/client/: CMakeLists.txt  animation_loader.cpp  animation_loader.hpp  combat_camera.hpp  controls_settings.hpp  effect_loader.cpp  effect_loader.hpp  game.cpp  game.hpp  game_assets.cpp  game_input.cpp  game_network.cpp  game_render.cpp  game_state.hpp  gameplay_hud.cpp  gameplay_hud.hpp  gameplay_panels.cpp  gameplay_panels.hpp  graphics_settings.hpp  input_bindings.cpp  input_bindings.hpp  main.cpp  menu_system.cpp  menu_system.hpp  menu_types.hpp  model_loader.cpp  model_loader.hpp  mouse_ui.hpp  network_client.cpp  network_client.hpp  network_message_handler.cpp  network_message_handler.hpp  network_message_handler.test.cpp  network_smoother.cpp  network_smoother.hpp  network_smoother.test.cpp  renderer.cpp  renderer.hpp  skill_data.cpp  skill_data.hpp  (+1 more)
src/client/ecs/: components.hpp
src/client/gpu/: gpu_device.hpp  gpu_pipeline.cpp  gpu_texture.hpp  gpu_uniforms.hpp  pipeline_registry.cpp
src/client/hud/: chat_window.cpp  debug_hud.cpp  debug_hud.hpp  floating_text.cpp  floating_text.hpp  hud_layout.cpp  hud_layout.hpp  hud_layout.test.cpp  hud_state.hpp  inventory_panel.cpp  npc_dialogue.cpp  npc_dialogue.hpp  panel_state.hpp  panels.hpp  party_widgets.cpp  quest_log_panel.cpp  quest_markers.cpp  quest_markers.hpp  screens.cpp  screens.hpp  talent_panel.cpp  vendor_window.cpp  widgets.cpp  widgets.hpp  world_map_panel.cpp  world_projection.cpp  world_projection.hpp  world_projection.test.cpp
src/client/render/: README.md  effect_renderer.cpp  effect_renderer.hpp  grass_renderer.cpp  terrain_renderer.cpp  terrain_renderer.hpp  text_renderer.hpp  world_renderer.cpp  world_renderer.hpp
src/client/scene/: render_scene.cpp  render_scene.hpp
src/client/shaders/: CMakeLists.txt  README.md  grass.vert.hlsl  skinned_model.vert.hlsl
src/client/systems/: animation_system.cpp  animation_system.hpp  interpolation_system.hpp  minimap_system.cpp  minimap_system.hpp  minimap_system.test.cpp  npc_interaction.cpp  npc_interaction.hpp  npc_interaction.test.cpp  render_system.cpp  render_system.hpp
src/common/: CMakeLists.txt  entity_config.hpp  heightmap.hpp  protocol.cpp  protocol.hpp  terrain.hpp
src/common/ecs/: components.hpp
src/editor/: CMakeLists.txt  editor_application.cpp  editor_application.hpp  editor_camera.cpp  editor_camera.hpp  editor_raycaster.cpp  editor_raycaster.hpp  editor_tools.cpp  editor_tools.hpp  main.cpp  world_save.cpp  world_save.hpp
src/engine/: CMakeLists.txt  EFFECTS_SYSTEM.md  application.cpp  application.hpp  effect_definition.hpp  effect_definition.test.cpp  effect_types.hpp  graphics_settings.hpp  graphics_settings.test.cpp  heightmap.hpp  heightmap.test.cpp  input_handler.cpp  input_handler.hpp  input_state.hpp  input_state.test.cpp  model_loader.cpp  model_loader.hpp  model_loader.test.cpp  model_utils.cpp  model_utils.hpp  model_utils.test.cpp  render_constants.hpp  render_constants.test.cpp  render_stats.hpp
src/engine/animation/: animation_parallel.test.cpp  animation_player.cpp  animation_player.hpp  animation_player.test.cpp  animation_state_machine.cpp  animation_state_machine.hpp  animation_state_machine.test.cpp  animation_types.hpp  animation_types.test.cpp  ik_solver.cpp  ik_solver.hpp
src/engine/core/: assert.hpp  handle.hpp  handle.test.cpp  hash.hpp  hash.test.cpp  logger.cpp  logger.hpp  logger.test.cpp  profiler.hpp  result.hpp  result.test.cpp
src/engine/gpu/: gpu_buffer.cpp  gpu_buffer.hpp  gpu_debug.cpp  gpu_debug.hpp  gpu_device.cpp  gpu_device.hpp  gpu_pipeline.cpp  gpu_pipeline.hpp  gpu_pipeline.test.cpp  gpu_shader.cpp  gpu_shader.hpp  gpu_texture.cpp  gpu_texture.hpp  gpu_types.hpp  gpu_types.test.cpp  gpu_uniforms.hpp  gpu_uniforms.test.cpp  pipeline_registry.cpp  pipeline_registry.hpp
src/engine/memory/: arena.cpp  arena.hpp  arena.test.cpp  frame_allocator.cpp  frame_allocator.hpp  frame_allocator.test.cpp
src/engine/procedural/: rock_generator.cpp  rock_generator.hpp  tree_generator.cpp  tree_generator.hpp  tree_generator.test.cpp
src/engine/render/: ambient_occlusion.cpp  ambient_occlusion.hpp  bloom.cpp  bloom.hpp  effect_renderer.cpp  effect_renderer.hpp  grass_renderer.cpp  grass_renderer.hpp  render_context.cpp  render_context.hpp  shadow_map.cpp  shadow_map.hpp  terrain_renderer.cpp  terrain_renderer.hpp  text_renderer.cpp  text_renderer.hpp  ui_renderer.cpp  ui_renderer.hpp  volumetric_fog.cpp  volumetric_fog.hpp  world_renderer.cpp  world_renderer.hpp
src/protocol/: CMakeLists.txt  buffer_reader.hpp  buffer_writer.hpp  class_info.hpp  class_select_msg.hpp  connect_msg.hpp  connection_accepted_msg.hpp  contracts.hpp  contracts.test.cpp  entity_delta.hpp  entity_exit_msg.hpp  entity_state.hpp  entity_state.test.cpp  gameplay_msgs.hpp  gameplay_msgs.test.cpp  heightmap.hpp  message_type.hpp  net_message_concept.hpp  packet.hpp  player_input.hpp  player_left_msg.hpp  protocol.cpp  protocol.hpp  serializable.hpp  world_config.hpp
src/server/: CMakeLists.txt  client_view_state.cpp  client_view_state.hpp  entity_config.hpp  game_config.cpp  game_config.hpp  game_config.test.cpp  game_types.hpp  game_world.hpp  gameplay_events.hpp  heightmap_generator.hpp  log.hpp  main.cpp  server.cpp  server.hpp  session.cpp  session.hpp  spatial_grid.cpp  spatial_grid.hpp  world.cpp  world.hpp
(+353 files in other folders)
